plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.1'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'jacoco'
}

java {
    sourceCompatibility = '17'
}

jacoco {
    toolVersion = '0.8.11'

}

// 루트 프로젝트를 포함해 하위 프로젝트 전체에 영향을 주는 설정
allprojects {
    group = 'com.dilly'
    version = '0.0.1-SNAPSHOT'

    repositories {
        mavenCentral()
    }

    // 공통 dependencies
    dependencies {
    }
}

// 해당 프로젝트에 포함된 모든 모듈에 영향을 주는 설정
subprojects {
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'

    dependencies {
        // basic
        implementation 'org.springframework.boot:spring-boot-starter'

        // lombok
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'com.fasterxml.jackson.core:jackson-databind'

        // test
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'com.h2database:h2'

        // swagger
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar.enabled = false
